methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:4: error: ';' expected but ',' found.
    {Color.yellow,Color.red,Color.blue,Color.green}
                 ^MethodsPicture:5: error: ')' expected but 'for' found.
  for (i <- L)
  ^